--- a/source/app/pubspec.yaml
+++ b/source/app/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.9
-
+  lottie: ^2.6.0
   email_validator: ^3.0.0
   fluttertoast: ^8.2.12
   intl: ^0.20.2
@@ -83,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/animations/
     #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
