--- a/source/api/src/main/resources/application.yaml
+++ b/source/api/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/flutter
     username: root
-    password: 'root'
+    password: MinhLuan.1004
 
   jpa:
     properties:
