--- a/source/app/pubspec.yaml
+++ b/source/app/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   url_launcher: ^6.3.1
   get: ^4.7.2
   google_fonts: ^6.1.0
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
