--- a/source/app/pubspec.yaml
+++ b/source/app/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter:
     sdk: flutter
   dart_jsonwebtoken: ^3.1.1
-  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,8 +64,9 @@ dependencies:
   url_launcher: ^6.3.1
   get: ^4.7.2
   google_fonts: ^6.1.0
-  firebase_core: ^3.13.0
 
+  web_socket_channel: ^2.4.0
+  stomp_dart_client: ^0.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
