--- a/source/app/pubspec.yaml
+++ b/source/app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   responsive_framework: ^1.5.1
   flutter_vector_icons: ^2.0.0
   image_picker: ^1.1.2
+  image: ^4.0.17
 
   fl_chart: ^0.70.2
 
@@ -71,7 +72,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  http: ^1.3.0
+  http: ^0.13.5
 
   provider: ^6.0.5
 
